@@ -1,2 +1,2 @@
-gorilla/index.theme.in
-gorilla/icons/index.theme.in
+Gorilla/index.theme.in
+Gorilla/icons/index.theme.in
